# rust_graphics

./: .Cargo.toml.swp  .gitignore  Cargo.toml
src/: .main.rs.swp  camera.rs  main.rs  pipelines.rs  state.rs
src/render/: buffer.rs  mod.rs
src/render/shaders/: shader.frag  shader.vert
src/shaders/: .shader.frag.swp  graphics.vert  shader.frag  shader.vert  triangle.frag  triangle.vert
src/shaders/texture_gen/: shader.frag  shader.vert
src/shaders/window_display/: shader.frag  shader.vert
