[package]
name = "rust_graphics"
version = "0.0.0"
authors = ["gregoryquick <gregory@quicks.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
shaderc = "0.7"

[dependencies.gfx-hal]
git = "https://github.com/gfx-rs/gfx"
branch = "hal-0.6"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx"
branch = "hal-0.6"
